Fixed Profile page header on mobile

--- a/src/components/pages/Profile/profile.module.css
+++ b/src/components/pages/Profile/profile.module.css
@@ -10,3 +10,7 @@
     align-items: center;
     flex-direction: row;
 }
+
+.header.mobile {
+    flex-direction: column;
+}
